<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoActivities"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.bash.app.referenciasapp.LibroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/autor"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txtLbrNombreAutor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".13"
        android:hint="@string/nombreAut" />

    <EditText
        android:id="@+id/txtLbrAPellidosAutor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".13"
        android:hint="@string/apellidoAut" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/libro"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txtLbrTitulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".13"
        android:hint="@string/titulo" />

    <EditText
        android:id="@+id/txtLbrEditoria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".13"
        android:hint="@string/editorial" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/publicacion"
        android:textColor="#000000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".13"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtLbrCiudad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:hint="@string/ciudad"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtLbrPais"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:hint="@string/pais"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtLbrAnio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:hint="@string/anio"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight=".13"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLbrCreaFicha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/cab_bnt2"
            android:padding="15dp"
            android:text="@string/btnCrear"
            android:textColor="@color/colorBlanco"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLbrBorraDatos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/cab_bnt2"
            android:padding="15dp"
            android:text="@string/btnLimpiar"
            android:textColor="@color/colorBlanco"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
